--- a/package.json
+++ b/package.json
@@ -1,24 +1,24 @@
 {
   "name": "generator-boomerang",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "description": "GDG Boomerang generator for Yeoman",
   "keywords": [
     "gdg",
     "boomerang"
   ],
-  "homepage": "https://github.com/joshuawoodward/generator-boomerang",
+  "homepage": "https://github.com/gdg-x/generator-boomerang",
   "bugs": {
-    "url": "https://github.com/joshuawoodward/generator-boomerang/issues"
+    "url": "https://github.com/gdg-x/generator-boomerang/issues"
   },
   "author": {
     "name": "Joshua Woodward",
     "email": "jw@woodwardmedia.net",
-    "url": "https://github.com/joshuawoodward"
+    "url": "https://github.com/gdg-x"
   },
   "main": "app/index.js",
   "repository": {
     "type": "git",
-    "url": "git://github.com/joshuawoodward/generator-boomerang.git"
+    "url": "git://github.com/gdg-x/generator-boomerang.git"
   },
   "scripts": {
     "test": "mocha"
@@ -37,7 +37,7 @@
       "type": "MIT"
     }
   ],
-  "readme": "# Generator-boomerang\n[![Build Status](https://secure.travis-ci.org/joshuawoodward/generator-boomerang.png?branch=master)](https://travis-ci.org/joshuawoodward/generator-boomerang)\n\nA generator for Yeoman.\n\n## Getting started\n- Make sure you have [yo](https://github.com/yeoman/yo) installed:\n    `npm install -g yo`\n- Install the generator: `npm install -g generator-boomerang`\n- Run: `yo boomerang`\n\n## License\n[MIT License](http://en.wikipedia.org/wiki/MIT_License)\n",
+  "readme": "# Generator-boomerang\n\n\nA generator for Yeoman.\n\n## Getting started\n- Make sure you have [yo](https://github.com/yeoman/yo) installed:\n    `npm install -g yo`\n- Install the generator: `npm install -g generator-boomerang`\n- Run: `yo boomerang`\n\n## License\n[MIT License](http://en.wikipedia.org/wiki/MIT_License)\n",
   "readmeFilename": "README.md",
   "_id": "generator-boomerang@0.0.3",
   "dist": {
